# netbox-oidc-group-sync

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_DEV.md  TODO.md  pyproject.toml
netbox_oidc_group_sync/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  pipeline.py  tables.py  urls.py  views.py
netbox_oidc_group_sync/api/: serializers.py  urls.py  views.py
netbox_oidc_group_sync/migrations/: 0001_initial.py
netbox_oidc_group_sync/templates/netbox_oidc_group_sync/: config.html  oidcgroupmapping.html  oidcgroupmapping_list.html
netbox_oidc_group_sync/tests/: test_api.py  test_models.py  test_pipeline.py  test_views.py
