[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-oidc-group-sync"
version = "0.1.0"
description = "NetBox plugin for syncing OIDC provider groups to Django groups"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Hardfault"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://hardfault.com"
Repository = "https://github.com/hrdflt/netbox-oidc-group-sync"

[tool.setuptools.packages.find]
include = ["netbox_oidc_group_sync*"]
